--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,8 @@
+body{
+    display: flex;
+    justify-content: center;
+}
+
 .card{
-    width: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-  }
+    margin-top: 10%;
+}
